--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,20 @@
-# MkDocs
-site/
-.mkdocs_cache/
+# build output
+dist/
+.output/
 
-# Python
-venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-pip-log.txt
-pip-delete-this-directory.txt
-.tox
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.log
-.git
-.mypy_cache
-.pytest_cache
-.hypothesis
+# dependencies
+node_modules/
 
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# OS
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
