--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Build Astro site
         run: npm run build
         
+      - name: List build output
+        run: ls -la dist/
+        
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
