--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@algolia/client-search": "^4.13.0",
-    "@astrojs/vue": "^0.0.2",
+    "@algolia/client-search": "^5.0.0",
+    "@astrojs/vue": "^4.5.1",
     "@docsearch/css": "^3.9.0",
     "@docsearch/react": "^3.9.0",
-    "@types/react": "^17.0.43",
-    "preact": "^10.7.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "sass": "^1.50.0",
-    "vue": "3.2"
+    "@types/react": "^18.0.0",
+    "preact": "^10.23.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "sass": "^1.79.0",
+    "vue": "^3.5.0"
   },
   "devDependencies": {
-    "@astrojs/preact": "^0.0.2",
-    "@astrojs/react": "^0.1.0",
-    "@astrojs/tailwind": "^0.1.0",
-    "astro": "^1.0.0-beta.5"
+    "@astrojs/preact": "^3.5.3",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.2",
+    "astro": "^4.16.0",
+    "tailwindcss": "^3.4.0"
   }
 }
